--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,12 +22,12 @@ test = [
 target-version = "py312"
 lint.extend-select = ["ALL"]
 lint.ignore = ["D100", "D104", "INP001"]
-exclude = [".venv/", "src/app/__pycache__/"]
+exclude = [".venv/"]
 
 [tool.mypy]
 python_version = "3.12"
 strict = true
-exclude = [".venv/", "src/app/__pycache__/"]
+exclude = [".venv/"]
 
 [tool.ruff.lint.per-file-ignores]
 "src/tests/*" = ["D103", "S101"]
