--- a/.github/workflows/checks_and_deployment.yml
+++ b/.github/workflows/checks_and_deployment.yml
@@ -1,8 +1,9 @@
-name: Code Checks
+name: Code Checks and Deployment
 
 on:
-  push:
-    branches: [main]
+  [workflow_dispatch]
+  # push:
+  #   branches: [main]
 
 jobs:
   checks:
@@ -33,3 +34,12 @@ jobs:
 
       - name: Run Pytest
         run: uv run pytest -vsx src/tests
+
+      - name: Build Docker Image
+        run: docker build . -t alexmahone/flask-socketio-chat:latest
+      
+      - name: Docker Login
+        run: docker login -u alexmahone -p ${{ secrets.DOCKERHUB_TOKEN }}
+      
+      - name: Push Image to Dockerhub
+        run: docker push alexmahone/flask-socketio-chat:latest
