--- a/.github/workflows/checks_and_deployment.yml
+++ b/.github/workflows/checks_and_deployment.yml
@@ -1,9 +1,10 @@
 name: Code Checks and Deployment
 
 on:
-  [workflow_dispatch]
-  # push:
-  #   branches: [main]
+  # uncomment to manually trigger the workflow
+  # [workflow_dispatch]
+  push:
+    branches: [main]
 
 jobs:
   checks:
