Change path to 'default.conf.tpl' and 'run.sh'

--- a/proxy/Dockerfile
+++ b/proxy/Dockerfile
@@ -1,6 +1,6 @@
 FROM nginxinc/nginx-unprivileged:1-alpine
-COPY ./proxy/default.conf.tpl /etc/nginx/default.conf.tpl
-COPY ./proxy/run.sh /run.sh
+COPY ./default.conf.tpl /etc/nginx/default.conf.tpl
+COPY ./run.sh /run.sh
 USER root
 RUN touch /etc/nginx/conf.d/default.conf && \
     chmod +x /run.sh
