--- a/.github/workflows/checks_and_deployment.yml
+++ b/.github/workflows/checks_and_deployment.yml
@@ -25,7 +25,7 @@ jobs:
           version: "0.7.13"
 
       - name: Install dependencies
-        run: uv sync --locked --all-extras --group test
+        run: uv sync --all-groups
 
       - name: Run Ruff
         run: uv run ruff check src/
