Add step to run end-to-end tests

--- a/.github/workflows/checks_and_deployment.yml
+++ b/.github/workflows/checks_and_deployment.yml
@@ -39,8 +39,18 @@ jobs:
       - name: Run all tests except end-to-end tests
         run: uv run pytest -m "not e2e"
 
-      # - name: Run end-to-end tests
-      #   run: uv run pytest -m e2e
+      - name: Generate .env file from template
+        run: cp .env.example .env
+
+      - name: Launch Docker Compose services for running end-to-end tests
+        run: docker compose up -d
+
+      - name: Run end-to-end tests
+        run: uv run pytest -m e2e
+
+      - name: Shut down Docker Compose services
+        if: success() || failure()
+        run: docker compose down -v
 
       - name: Build Docker Image
         run: docker build . -t alexmahone/flask-socketio-chat:latest
